# techflow-chat-system

./: .gitignore  README.md  cli_chat.py  main.py  pyproject.toml
prompts/: greeter_agent.txt  processor_agent.txt  retention_agent.txt
scripts/: run_tests.py  test_cli_scenarios.py  visualise_graph.py
src/: config.py  logger.py  tools.py
src/agents/: __init__.py  graph.py  greeter_agent.py  processor_agent.py  retention_agent.py  state.py
src/api/: __init__.py  main.py  schemas.py  session.py  tracing.py
src/llm/: __init__.py  gemini_client.py  openai_client.py
src/rag/: __init__.py  document_loader.py  retriever.py  vector_store.py
src/utils/: prompts.py
static/: app.js  index.html  style.css
tests/: test_agents.py  test_rag.py  test_tools.py
