[project]
name = "techflow-chat-system"
version = "0.1.0"
description = "Multi-agent customer support chat system for retention"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "graphviz>=0.21",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.13",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=1.1.0",
    "langfuse>=3.14.2",
    "langgraph>=1.0.8",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
